<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Alexandria</string>

    <!-- Menu Items -->
    <string name="books">My Library</string>
    <string name="scan">Search for Book</string>
    <string name="about">About</string>

    <string name="navigation_drawer_open" >Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="scan_button">Scan</string>
    <string name="input_hint">Insert ISBN-13. Digits only.</string>
    <string name="book_cover">Bookcover</string>
    <string name="add_book">Add To Library</string>

    <string name="ok_button">Next</string>
    <string name="cancel_button">Cancel</string>
    <string name="not_found">No Book found</string>
    <string name="about_title">Alexandria</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="pref_startScreen">Select Start Screen</string>
    <string name="title_activity_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="back_button">go back</string>
    <string name="share_text">A must read book: </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="about_text">This application obtains book information such as
        book titles, cover images, and author information from the Google Books API. \n\n
        The barcode scanning feature has been adapted from the ZXing library. \n\n
        The original version of this app was built by Sascha Jaschke,
        and a modified version was given to students in the Udacity Android Nanodegree program.\n\n
        Icons belong to their respective owner and designers.\n\n

        Android Nanodegree 2015
    </string>
    <string name="title_activity_capture_activity_any_orientation">CaptureActivityAnyOrientation
    </string>

    <string name="hello_world">Hello world!</string>

    <string name="dummy_book_name">The Girl On The Train</string>
    <string name="dummy_book_summary">A nail-biting, stealthy psychological thriller. A nail-biting, stealthy psychological thriller.
    A nail-biting, stealthy psychological thriller. A nail-biting, stealthy psychological thriller. A nail-biting, stealthy psychological thriller.
    A nail-biting, stealthy psychological thriller. A nail-biting, stealthy psychological thriller. A nail-biting, stealthy psychological thriller.
    </string>
    <string name="dummy_book_author">Paula Hawkins</string>
    <string name="dummy_book_category">Commuters</string>

</resources>
