<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="it.jaschke.alexandria.AddBook">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center_horizontal|top">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:id="@+id/eancontainer"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:minEms="@integer/ean_width"
                android:id="@+id/ean"
                android:saveEnabled="true"
                android:maxLength="@integer/ean_size"
                android:maxLines="1"
                android:hint="@string/input_hint"
                android:paddingRight="20dp"/>

            <Button
                style="@style/PrimaryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan_button"
                android:id="@+id/scanButton" />

        </LinearLayout>

        <it.gmariotti.cardslib.library.view.component.CardThumbnailView
            android:layout_width="match_parent"
            android:layout_height="160dp"
            xmlns:card="http://schemas.android.com/apk/res-auto"
            android:id="@+id/bookCard"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="12dp"
            card:card_layout_resourceID="@layout/native_card_thumbnail_layout"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:background="@color/card_gray"
            android:elevation="3dp"
            android:visibility="invisible"
            android:touchscreenBlocksFocus="false">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/bookCover"
                    android:layout_width="110dp"
                    android:layout_height="fill_parent"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentTop="true"
                    android:contentDescription="@string/book_cover"
                    android:src="@drawable/ic_launcher"
                    android:scaleType="fitXY"
                    android:layout_gravity="top" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <TextView
                        android:id="@+id/bookTitle"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_alignWithParentIfMissing="true"
                        android:layout_toRightOf="@id/fullBookCover"
                        android:ellipsize="end"
                        android:scrollHorizontally="true"
                        android:layout_marginRight="10dp"
                        android:maxLines="1"
                        android:text="@string/dummy_book_name"
                        style="@style/BookTitleStyle"
                        android:singleLine="true" />

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="fill_parent"
                        android:layout_height="26dip"
                        android:singleLine="true"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:layout_marginRight="10dp"
                        android:layout_alignParentBottom="true"
                        android:layout_toRightOf="@+id/fullBookCover"
                        android:layout_toEndOf="@+id/fullBookCover"
                        android:text="@string/dummy_book_author"
                        style="@style/BookMiniTitleStyle"/>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:id="@+id/categoryIcon"
                            android:src="@drawable/book_genre"
                            android:visibility="invisible" />

                        <TextView
                            android:id="@+id/categories"
                            android:layout_width="fill_parent"
                            android:layout_height="26dip"
                            android:singleLine="true"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:layout_alignParentBottom="true"
                            android:layout_toRightOf="@+id/fullBookCover"
                            android:layout_toEndOf="@+id/fullBookCover"
                            android:text="@string/dummy_book_category"
                            style="@style/BookMiniTitleStyle"
                            android:layout_marginLeft="6dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginBottom="5dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/add_book"
                            android:id="@+id/saveButton"
                            style="@style/ButtonTextStyle"
                            android:layout_weight="1"
                            android:layout_gravity="center_vertical"
                            android:clickable="true"
                            android:gravity="center" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/cancel_button"
                            android:id="@+id/deleteButton"
                            style="@style/ButtonTextStyle"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:clickable="true"
                            android:gravity="center" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </it.gmariotti.cardslib.library.view.component.CardThumbnailView>


    </LinearLayout>
</LinearLayout>
